--- a/Odin_project/Google_search_page/index.html
+++ b/Odin_project/Google_search_page/index.html
@@ -1,12 +1,136 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title></title>
-  <link rel="stylesheet" type="text/css" href="styles/style.css">  
+  <title>Google Search</title>
+  <link rel="stylesheet" type="text/css" href="styles/style.css">
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
+  <script src="https://use.fontawesome.com/f37781fe0a.js"></script>
 </head>
 
 <body>
+  <nav>
+    <a href="#"><img src="images/logo.JPG" class="logo"></a>
+    <input type="text" name="search_bar" class="search_bar" autofocus>
+    <div class="sign">
+      <a href="#"><i class="fa fa-th fa-lg"></i></a>
+      <a href="#" id="sign_in">Sign In</a>
+    </div>
+    <div class="links">
+      <a href='#' id="active">All</a>
+      <a href='#'>Maps</a>
+      <a href='#'>Images</a>
+      <a href='#'>News</a>
+      <a href='#'>Videos</a>
+      <a href='#'>More</a>
+      <div class="l_right">
+        <a href='#'>Settings</a>
+        <a href='#'>Tools</a>
+      </div>
+    </div>
+  </nav>
+
+<p id="results">About 1,960,000,000 results (1.10 seconds)</p>
   
+<aside>
+  <table>
+  <tr>
+    <td>
+      <img src="images/map.png">
+      Australia<br>
+      Country in Oceania
+    </td>
+  </tr>
+  <tr><td>
+  Australia is a country and continent surrounded by the Indian and Pacific oceans. Its major cities – Sydney, Brisbane, Melbourne, Perth, Adelaide – are coastal. Its capital, Canberra, is inland. The country is known for its Sydney Opera House, the Great Barrier Reef, a vast interior desert wilderness called the Outback, and unique animal species like kangaroos and duck-billed platypuses.<br>
+  <strong>Capital:</strong> Canberra<br>
+  <strong>Dialing code:</strong> +61<br>
+  <strong>Population:</strong> 24.13 million (2016) World Bank<br>
+  <strong>Prime minister: </strong><a href="#">Malcolm Turnbull</a>
+  </td></tr>
+  </table>
+</aside>
+
+<section>
+  <a href="#">Australia - Wikipedia</a>
+  <span class="website">https://en.wikipedia.org/wiki/Australia <i class="fa fa-caret-down"></i></span>
+  Australia officially the Commonwealth of Australia, is a sovereign country comprising the mainland of the Australian continent, the island of Tasmania and ...
+  Australia (continent) · Canberra · Sydney · Indigenous Australians 
+</section>
+  
+<section>
+  <table>
+    <tr><td colspan="4">Things to do in Australia</td></tr>
+    <tr>
+      <td><img src="images/sydney.jpg">
+          Sydney<br>
+          Sydney Opera House &amp; Bondi Beach surfing</td>
+      <td><img src="images/melbourne.jpg">
+          Melbourne<br>
+          Art, museums &amp; Royal Botanic Gardens</td>
+      <td><img src="images/brisbane.jpg">
+          Brisbane<br>
+          South Bank museums &amp; Mt. Coot-tha</td>
+      <td><img src="images/cairns.jpg">
+          Cairns<br>
+          Rainforest &amp; Great Barrier Reef gateway</td>
+    </tr>
+  </table>
+
+</section> 
+  
+<section>
+  <a href="#">Tourism Australia: Visit Australia - Travel &amp; Tour Information</a>
+  <span class="website">www.australia.com/ <i class="fa fa-caret-down"></i></span>
+  Become inspired to travel to Australia. Discover fantastic things to do, places to go and more. Visit the official site of Tourism Australia here.
+</section>
+
+<section>
+  <a href="#">Australia - Lonely Planet</a>
+  <span class="website">https://www.lonelyplanet.com/australia <i class="fa fa-caret-down"></i></span>
+  Australia is a wild and beautiful place, a land whose colour palette of red outback sands and Technicolor reefs frames sophisticated cities and...
+</section>  
+  
+<section>
+  <a href="#">Australia.gov.au</a>
+  <span class="website">www.australia.gov.au/ <i class="fa fa-caret-down"></i></span>
+  Inspires young women to be more active and play sport. BreastScreen Autralia. BreastScreen Australia. Invitation for free breast screening now covers women ...
+</section>  
+
+<section>
+  <a href="#">Australia.com - Home | Facebook</a>
+  <span class="website">https://www.facebook.com/SeeAustralia/ <i class="fa fa-caret-down"></i></span>
+  Australia.com. 7921841 likes · 111836 talking about this. Tourism Australia's official Facebook page. Post your best photos to our wall to give us...
+</section>  
+
+<section>
+  <a href="#">The Australian | Latest Australian National and Live Business News</a>
+  <span class="website">www.theaustralian.com.au/ <i class="fa fa-caret-down"></i></span>
+  The Australian National and International News with in-depth Business News and Political coverage including Lifestyle, Arts and Sports and more online at The ...
+</section>  
+  
+<section>
+  Searches related to australia
+  australia tourism
+  australia sydney
+  australia destinations
+  australia facts
+  australia map
+  australia city
+  australia movie
+  australia jobs
+</section>
+  
+<section class="navbar">
+  <img src="images/nav.JPG">
+</section>
+  
+<footer>
+  <a href="#">Help</a>
+  <a href="#">Send feedback</a>
+  <a href="#">Privacy</a>
+  <a href="#">Terms</a>
+</footer>
+
 </body>
 
 </html>
