Complete Search Page Styling

--- a/Odin_project/Google_search_page/index.html
+++ b/Odin_project/Google_search_page/index.html
@@ -32,7 +32,7 @@
 <p id="results">About 1,960,000,000 results (1.10 seconds)</p>
   
 <aside>
-  <table>
+  <table class="about">
   <tr>
     <td>
       <img class="map" src="images/map.png">
@@ -41,11 +41,13 @@
     </td>
   </tr>
   <tr><td>
-  Australia is a country and continent surrounded by the Indian and Pacific oceans. Its major cities – Sydney, Brisbane, Melbourne, Perth, Adelaide – are coastal. Its capital, Canberra, is inland. The country is known for its Sydney Opera House, the Great Barrier Reef, a vast interior desert wilderness called the Outback, and unique animal species like kangaroos and duck-billed platypuses.<br>
-  <strong>Capital:</strong> Canberra<br>
-  <strong>Dialing code:</strong> +61<br>
-  <strong>Population:</strong> 24.13 million (2016) World Bank<br>
-  <strong>Prime minister: </strong><a href="#">Malcolm Turnbull</a>
+  <p class="about_text">Australia is a country and continent surrounded by the Indian and Pacific oceans. Its major cities – Sydney, Brisbane, Melbourne, Perth, Adelaide – are coastal. Its capital, Canberra, is inland. The country is known for its Sydney Opera House, the Great Barrier Reef, a vast interior desert wilderness called the Outback, and unique animal species like kangaroos and duck-billed platypuses.</p>
+  <p class="info">
+    <strong>Capital: </strong><a href="#"> Canberra</a><br>
+    <strong>Dialing code: </strong> +61<br>
+    <strong>Population: </strong> 24.13 million (2016) <span id="sub">World Bank</span><br>
+    <strong>Prime minister: </strong><a href="#">Malcolm Turnbull</a>
+  </p>
   </td></tr>
   </table>
 </aside>
@@ -53,24 +55,24 @@
 <section>
   <a href="#"><h2>Australia - Wikipedia</h2></a>
   <span class="website">https://en.wikipedia.org/wiki/Australia <i class="fa fa-caret-down"></i></span><br>
-  Australia officially the Commonwealth of Australia, is a sovereign country comprising the mainland of the Australian continent, the island of Tasmania and ...
+  <p class="text">Australia officially the Commonwealth of Australia, is a sovereign country comprising the mainland of the Australian continent, the island of Tasmania and ...</p>
 </section>
   
 <section>
-  <table>
+  <table class="things">
     <tr><td colspan="4"><h3>Things to do in Australia</h3></td></tr>
     <tr>
       <td><img src="images/sydney.jpg">
-          Sydney<br>
+          <p class="things_head">Sydney</p>
           Sydney Opera House &amp; Bondi Beach surfing</td>
       <td><img src="images/melbourne.jpg">
-          Melbourne<br>
+          <p class="things_head">Melbourne</p>
           Art, museums &amp; Royal Botanic Gardens</td>
       <td><img src="images/brisbane.jpg">
-          Brisbane<br>
+          <p class="things_head">Brisbane</p>
           South Bank museums &amp; Mt. Coot-tha</td>
       <td><img src="images/cairns.jpg">
-          Cairns<br>
+          <p class="things_head">Cairns</p>
           Rainforest &amp; Great Barrier Reef gateway</td>
     </tr>
   </table>
@@ -80,31 +82,31 @@
 <section>
   <a href="#"><h2>Tourism Australia: Visit Australia - Travel &amp; Tour Information</h2></a>
   <span class="website">www.australia.com/ <i class="fa fa-caret-down"></i></span><br>
-  Become inspired to travel to Australia. Discover fantastic things to do, places to go and more. Visit the official site of Tourism Australia here.
+  <p class="text">Become inspired to travel to Australia. Discover fantastic things to do, places to go and more. Visit the official site of Tourism Australia here.</p>
 </section>
 
 <section>
   <a href="#"><h2>Australia - Lonely Planet</h2></a>
   <span class="website">https://www.lonelyplanet.com/australia <i class="fa fa-caret-down"></i></span><br>
-  Australia is a wild and beautiful place, a land whose colour palette of red outback sands and Technicolor reefs frames sophisticated cities and...
+  <p class="text">Australia is a wild and beautiful place, a land whose colour palette of red outback sands and Technicolor reefs frames sophisticated cities and...</p>
 </section>  
   
 <section>
   <a href="#"><h2>Australia.gov.au</h2></a>
   <span class="website">www.australia.gov.au/ <i class="fa fa-caret-down"></i></span><br>
-  Inspires young women to be more active and play sport. BreastScreen Autralia. BreastScreen Australia. Invitation for free breast screening now covers women ...
+  <p class="text">Inspires young women to be more active and play sport. BreastScreen Autralia. BreastScreen Australia. Invitation for free breast screening now covers women ...</p>
 </section>  
 
 <section>
   <a href="#"><h2>Australia.com - Home | Facebook</h2></a>
   <span class="website">https://www.facebook.com/SeeAustralia/ <i class="fa fa-caret-down"></i></span><br>
-  Australia.com. 7921841 likes · 111836 talking about this. Tourism Australia's official Facebook page. Post your best photos to our wall to give us...
+  <p class="text">Australia.com. 7921841 likes · 111836 talking about this. Tourism Australia's official Facebook page. Post your best photos to our wall to give us...</p>
 </section>  
 
 <section>
   <a href="#"><h2>The Australian | Latest Australian National and Live Business News</h2></a>
   <span class="website">www.theaustralian.com.au/<i class="fa fa-caret-down"></i></span><br>
-  The Australian National and International News with in-depth Business News and Political coverage including Lifestyle, Arts and Sports and more online at The ...
+  <p class="text">The Australian National and International News with in-depth Business News and Political coverage including Lifestyle, Arts and Sports and more online at The ...</p>
 </section>  
   
 <section class="extra_search">
