Add structure to index.html

--- a/Free_code_camp/Tribute_site/index.html
+++ b/Free_code_camp/Tribute_site/index.html
@@ -6,6 +6,26 @@
 </head>
 	
 <body>
+
+<section class="home_sec">
+	<img src="images/logo.png" alt="logo">
+	Tribute To The
+	Pineapple
+	Link?
+</section>	
+
+<section class="quote_sec">
+	<div class="quote_box">Quote</div>
+	<img src="images/1.jpg" alt="Pinapples">
+</section>
+	
+<section class="info_sec">
+	Information
+</section>
+
+<section>Image with find out more box
+	<img src="images/3.png" alt="Pineapple Bush">
+</section>
 	
 </body>
 
