--- a/Free_code_camp/Tribute_site/index.html
+++ b/Free_code_camp/Tribute_site/index.html
@@ -3,15 +3,18 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="styles/style.css">
 	<script src="scripts/script.js"></script>
+	<link href="https://fonts.googleapis.com/css?family=Courgette|Saira+Semi+Condensed" rel="stylesheet">
 </head>
 	
 <body>
 
 <section class="home_sec">
-	<img src="images/logo.png" alt="logo">
-	Tribute To The
-	Pineapple
-	Link?
+	<img id="logo" src="images/logo.png" alt="logo">
+	<div class="heading">
+		<div class="tribute_header">A Tribute to the</div>
+		<div class="pine_header">PINEAPPLE</div>
+	</div>
+	<div class="button">LEARN MORE</div>
 </section>	
 
 <section class="quote_sec">
