Style Quote Section

--- a/Free_code_camp/Tribute_site/index.html
+++ b/Free_code_camp/Tribute_site/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<title>Pineapple Power</title>
 	<link rel="stylesheet" type="text/css" href="styles/style.css">
 	<script src="scripts/script.js"></script>
+	<script src="https://use.fontawesome.com/f37781fe0a.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Courgette|Saira+Semi+Condensed" rel="stylesheet">
 </head>
 	
@@ -18,8 +20,16 @@
 </section>	
 
 <section class="quote_sec">
-	<div class="quote_box">Quote</div>
-	<img src="images/1.jpg" alt="Pinapples">
+	<div class="quote_cont">
+		<div class="quote_box">
+			<div id="quote_line">
+				<i class="fa fa-quote-left"></i>
+				Pineapple does not go on top of pizza
+				<i class="fa fa-quote-right"></i>
+			</div>
+			<span id="quote_name"><br>Gordon Ramsay</span>
+		</div>
+	</div>
 </section>
 	
 <section class="info_sec">
