Update Font and Colours

--- a/Free_code_camp/Tribute_site/index.html
+++ b/Free_code_camp/Tribute_site/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="styles/style.css">
 	<script src="scripts/script.js"></script>
 	<script src="https://use.fontawesome.com/f37781fe0a.js"></script>
-	<link href="https://fonts.googleapis.com/css?family=Courgette|Saira+Semi+Condensed" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Courgette|Saira+Semi+Condensed|Roboto" rel="stylesheet">
 </head>
 	
 <body>
@@ -16,7 +16,7 @@
 		<div class="tribute_header">A Tribute to the</div>
 		<div class="pine_header">PINEAPPLE</div>
 	</div>
-	<div class="button">LEARN MORE</div>
+	<a href="#info"><div class="head_button">LEARN MORE</div></a>
 </section>	
 
 <section class="quote_sec">
@@ -32,12 +32,33 @@
 	</div>
 </section>
 	
-<section class="info_sec">
-	Information
+<section class="info_sec" id="info">
+	<div class="heading">
+		<div class="info_head">PINEAPPLE FACTS</div>
+		<div class="info_text">
+			Have you ever wanted to know more about the great pineapple but haven't known where to start? Well look no further!
+		</div>
+	</div>
+	<div class="info_boxes">
+		<div class="info_box">1</div>
+		<div class="info_box">2</div>
+		<div class="info_box">3</div>
+		<div class="info_box">4</div>
+		<div class="info_box">5</div>
+		<div class="info_box">6</div>
+		<div class="info_box">7</div>
+		<div class="info_box">8</div>
+	</div>
 </section>
 
-<section>Image with find out more box
-	<img src="images/3.png" alt="Pineapple Bush">
+<section class="more_sec">
+	<div class="more_cont">
+		<div class="more_box">
+			Not Enough for you?
+			Check out the Wikipedia Page for More Pineapple Trivia
+			<a href="https://en.wikipedia.org/wiki/Pineapple"><div class="more_button">LEARN EVEN MORE</div></a>
+		</div>
+	</div>
 </section>
 	
 </body>
