Layout Info Section

--- a/Free_code_camp/Tribute_site/index.html
+++ b/Free_code_camp/Tribute_site/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Pineapple Power</title>
+	<title>Pineapples: A Tribute</title>
 	<link rel="stylesheet" type="text/css" href="styles/style.css">
 	<script src="scripts/script.js"></script>
 	<script src="https://use.fontawesome.com/f37781fe0a.js"></script>
@@ -54,8 +54,8 @@
 <section class="more_sec">
 	<div class="more_cont">
 		<div class="more_box">
-			Not Enough for you?
-			Check out the Wikipedia Page for More Pineapple Trivia
+			<span class="more_header">Not Enough for you?</span><br>
+			<span class="more_text">Check out the Wikipedia Page for More Pineapple Trivia</span>
 			<a href="https://en.wikipedia.org/wiki/Pineapple"><div class="more_button">LEARN EVEN MORE</div></a>
 		</div>
 	</div>
