Style Info Section

--- a/Free_code_camp/Tribute_site/index.html
+++ b/Free_code_camp/Tribute_site/index.html
@@ -36,18 +36,19 @@
 	<div class="heading">
 		<div class="info_head">PINEAPPLE FACTS</div>
 		<div class="info_text">
-			Have you ever wanted to know more about the great pineapple but haven't known where to start? Well look no further!
+			Have you ever wanted to know more about the great pineapple but haven't known where to start? Well look no further! <br>
+			Hover over for more information.
 		</div>
 	</div>
 	<div class="info_boxes">
-		<div class="info_box">1</div>
-		<div class="info_box">2</div>
-		<div class="info_box">3</div>
-		<div class="info_box">4</div>
-		<div class="info_box">5</div>
-		<div class="info_box">6</div>
-		<div class="info_box">7</div>
-		<div class="info_box">8</div>
+		<div class="info_box box_1">Where did the name come from?</div>
+		<div class="info_box box_2">What is a Pineapple?</div>
+		<div class="info_box box_3">How long do they take to grow?</div>
+		<div class="info_box box_4">How long do Pineapple Plants take to grow?</div>
+		<div class="info_box box_5">How can you grow a Pineapple?</div>
+		<div class="info_box box_6">How big was the largest Pineapple?</div>
+		<div class="info_box box_7">Where are they grown?</div>
+		<div class="info_box box_8">What's another name for a Pineapple?</div>
 	</div>
 </section>
 
