Animate Info Section Hover over boxes

--- a/Free_code_camp/Tribute_site/index.html
+++ b/Free_code_camp/Tribute_site/index.html
@@ -40,15 +40,63 @@
 			Hover over for more information.
 		</div>
 	</div>
+	
 	<div class="info_boxes">
-		<div class="info_box box_1">Where did the name come from?</div>
-		<div class="info_box box_2">What is a Pineapple?</div>
-		<div class="info_box box_3">How long do they take to grow?</div>
-		<div class="info_box box_4">How long do Pineapple Plants take to grow?</div>
-		<div class="info_box box_5">How can you grow a Pineapple?</div>
-		<div class="info_box box_6">How big was the largest Pineapple?</div>
-		<div class="info_box box_7">Where are they grown?</div>
-		<div class="info_box box_8">What's another name for a Pineapple?</div>
+		<div class="info_box box_1">
+			<div class="box_ques">Where did the name come from?</div>
+			<div class="popup">
+				<div class="box_ans">When this fruit was discovered in America, the Europeans named them Pineapples because they looked similar to Pine Cones</div>
+			</div>
+		</div>
+		
+		<div class="info_box box_2">
+			<div class="box_ques">What is a Pineapple?</div>
+			<div class="popup">
+				<div class="box_ans">A Pineapple is not an apple or pine, it's actually a berry</div>
+			</div>
+		</div>
+		
+		<div class="info_box box_3">
+			<div class="box_ques">How long do they take to grow?</div>
+			<div class="popup">
+				<div class="box_ans">An individual Pineapple can take over two years to grow, although they are usually picked slightly eariler</div>
+			</div>
+		</div>
+		
+		<div class="info_box box_4">
+			<div class="box_ques">How long do Pineapple Plants take to grow?</div>
+			<div class="popup">
+				<div class="box_ans">In the wild, Pinapple plants can live and fruit for up to 50 years</div>
+			</div>
+		</div>
+		
+		<div class="info_box box_5">
+			<div class="box_ques">How can you grow a Pineapple?</div>
+			<div class="popup">
+				<div class="box_ans">You can grow Pineapple Plants by slicing off the top of a pineapple and planting it in the soil</div>
+			</div>
+		</div>
+		
+		<div class="info_box box_6">
+			<div class="box_ques">How big was the largest Pineapple?</div>
+			<div class="popup">
+				<div class="box_ans">The world's largest Pineapple ever recored was in 2011.  It weighed 8.28kg</div>
+			</div>
+		</div>
+		
+		<div class="info_box box_7">
+			<div class="box_ques">Where are they grown?</div>
+			<div class="popup">
+				<div class="box_ans">75% of all Pineapples sold in Europe are grown entirely in Costa Rica</div>
+			</div>
+		</div>
+		
+		<div class="info_box box_8">
+			<div class="box_ques">What is another name for Pineapples?</div>
+			<div class="popup">
+				<div class="box_ans">The Hawaiian word for Pineapple in 'halakahiki'</div>
+			</div>
+		</div>
 	</div>
 </section>
 
