Add Survey Site Layout

--- a/Free_code_camp/Survey/index.html
+++ b/Free_code_camp/Survey/index.html
@@ -3,10 +3,18 @@
 
 <head>
 	<link rel="stylesheet" type="text/css" href="styles/style.css">
-	<script src="scripts/script.js"></script>
 </head>	
 
 <body>
+	
+<section class="container">
+	<div>GREETING</div>
+	<div class="form">
+		<div class="form_box">Details</div>
+		<div class="form_box">Details</div>
+		<div class="form_box">Ratings</div>
+	</div>
+</section>
 	
 </body>
 
