--- a/Free_code_camp/Survey/index.html
+++ b/Free_code_camp/Survey/index.html
@@ -8,11 +8,53 @@
 <body>
 	
 <section class="container">
-	<div>GREETING</div>
+	<div class="heading">
+		Thank you for Staying
+		
+		Your opinion on our services is of the utmost importance to us, therefore we kindly ask you to take a few moments and fill in our survey. Your feedback will help us improve our services and adapt them according to your suggestions and wishes. Thank you very much for your help
+	</div>
 	<div class="form">
-		<div class="form_box">Details</div>
-		<div class="form_box">Details</div>
-		<div class="form_box">Ratings</div>
+		<div class="form_box">
+			Information about your stay	
+			Hotel
+			Name 
+			Arrival, Departure
+			Email
+			If you would like to received a reply to any of your comments
+		</div>
+		<div class="form_box">
+			How did you hear about our hotel
+				From an acquaintance
+				From advertising
+				From a travel agency
+				From the internet
+				Other
+
+			Purpose of your visit
+				Business
+				Conference
+				Sightseeing
+				Relaxation
+				Health
+			
+			Would you recommend our hotel to friends/family
+				Yes
+				No
+
+			Do you have any other comments, which may help us improve our service?
+
+		</div>
+		<div class="form_box">
+			Rate our Services
+			Arrival and Welcome at the Hotel
+			Check in Procedure
+			Friendliness of Reception/Concierge Staff
+			Cleanliness of the room and bathroom
+			Room Service and minibar content
+			Atmosphere/cleanliness of public areas
+			Standard of restaurant service
+			Check-out procedure
+		</div>
 	</div>
 </section>
 	
