--- a/Free_code_camp/Survey/index.html
+++ b/Free_code_camp/Survey/index.html
@@ -3,6 +3,7 @@
 
 <head>
 	<link rel="stylesheet" type="text/css" href="styles/style.css">
+	<script src="script/script.js"></script>
 </head>	
 
 <body>
@@ -13,49 +14,55 @@
 		
 		Your opinion on our services is of the utmost importance to us, therefore we kindly ask you to take a few moments and fill in our survey. Your feedback will help us improve our services and adapt them according to your suggestions and wishes. Thank you very much for your help
 	</div>
+	
+	<form>
 	<div class="form">
 		<div class="form_box">
 			Information about your stay	
-			Hotel
-			Name 
-			Arrival, Departure
+			Hotel <input type="text" name="hotel" required>
+			Name <input type="text" name="name">
+			Arrival <input type="date" name="arrival"> Departure <input type="date" name="depart">
 			Email
 			If you would like to received a reply to any of your comments
+			<input type="text" name="email">
 		</div>
 		<div class="form_box">
 			How did you hear about our hotel
-				From an acquaintance
-				From advertising
-				From a travel agency
-				From the internet
-				Other
+				<input type="radio" name="hear" value="acquaintance">From an acquaintance<br>
+				<input type="radio" name="hear" value="advertising">From advertising<br>
+				<input type="radio" name="hear" value="agency">From a travel agency<br>
+				<input type="radio" name="hear" value="internet">From the internet<br>
+				Other<input type="text" name="other"><br>
 
 			Purpose of your visit
-				Business
-				Conference
-				Sightseeing
-				Relaxation
-				Health
+				<input type="radio" name="purpose" value="business">Business<br>
+				<input type="radio" name="purpose" value="conference">Conference<br>
+				<input type="radio" name="purpose" value="sights">Sightseeing<br>
+				<input type="radio" name="purpose" value="relax">Relaxation<br>
+				<input type="radio" name="purpose" value="health">Health<br>
 			
 			Would you recommend our hotel to friends/family
-				Yes
-				No
+				<input type="radio" name="recommend" value="yes">Yes<br>
+				<input type="radio" name="recommend" value="no">No<br>
 
 			Do you have any other comments, which may help us improve our service?
-
+			<input type="text" name="comments"><br>
+			
 		</div>
 		<div class="form_box">
 			Rate our Services
-			Arrival and Welcome at the Hotel
-			Check in Procedure
-			Friendliness of Reception/Concierge Staff
-			Cleanliness of the room and bathroom
-			Room Service and minibar content
-			Atmosphere/cleanliness of public areas
-			Standard of restaurant service
-			Check-out procedure
+			Arrival and Welcome at the Hotel <input type="range" value="1" min="1" max="5">
+			Check in Procedure <input type="range" value="1" min="1" max="5">
+			Friendliness of Reception/Concierge Staff <input type="range" value="1" min="1" max="5">
+			Cleanliness of the room and bathroom <input type="range" value="1" min="1" max="5">
+			Room Service and minibar content <input type="range" value="1" min="1" max="5">
+			Atmosphere/cleanliness of public areas <input type="range" value="1" min="1" max="5">
+			Standard of restaurant service <input type="range" value="1" min="1" max="5">
+			Check-out procedure <input type="range" value="1" min="1" max="5">
 		</div>
 	</div>
+	</form>
+	
 </section>
 	
 </body>
