Create Page Layout

--- a/Free_code_camp/Technical_document/index.html
+++ b/Free_code_camp/Technical_document/index.html
@@ -2,10 +2,57 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="styles/style.css">
+	<script src="https://use.fontawesome.com/f37781fe0a.js"></script>
 	<script src="scripts/script.js"></script>
 </head>
 	
 <body>
+	
+<header>
+	<h1>TITLE</h1>
+</header>
+	
+<section>
+	<div class="container">
+		<div class="side_bar">
+			<h2>Contents</h2>
+			<p>Select drop down sub categories</p>
+				<div class="sections">Section 1 <i class="fa fa-caret-down"></i></div>
+					<div class="sub_group" id="sub_1">
+						<a href="#">Sub Category</a>
+						<a href="#">Sub Category</a>
+						<a href="#">Sub Category</a>
+						<a href="#">Sub Category</a>
+					</div>
+				<div class="sections">Section 2 <i class="fa fa-caret-down"></i></div>
+					<div class="sub_group" id="sub_2">
+						<a href="#">Sub Category</a>
+						<a href="#">Sub Category</a>
+						<a href="#">Sub Category</a>
+						<a href="#">Sub Category</a>
+					</div>
+				<div class="sections">Section 3 <i class="fa fa-caret-down"></i></div>
+					<div class="sub_group" id="sub_3">
+						<a href="#">Sub Category</a>
+						<a href="#">Sub Category</a>
+						<a href="#">Sub Category</a>
+						<a href="#">Sub Category</a>
+					</div>
+			Side Bar
+		</div>
+		
+		
+		
+		
+		<div class="content">
+			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ut tristique eros, sit amet sagittis est. Mauris accumsan felis justo, eu tempus lacus suscipit a. Vestibulum eu dapibus risus. In consequat neque quis tortor aliquam, quis lobortis dolor aliquam. Morbi volutpat ligula eu sodales rutrum. Proin varius in enim eu tincidunt. Nulla facilisi. Vestibulum vestibulum dolor placerat, euismod leo ac, mattis purus. Nunc accumsan euismod sollicitudin. Duis pulvinar molestie orci, dictum mattis erat commodo eu. Nam ullamcorper nibh vitae enim bibendum, id efficitur metus iaculis. Aenean congue quam vel ligula feugiat efficitur. Etiam tincidunt viverra ex, eget vestibulum neque interdum id. Vivamus semper venenatis dui, nec congue purus.
+
+			Nunc sit amet fermentum lectus. Ut ac faucibus lectus. Aenean pellentesque lacinia auctor. In hac habitasse platea dictumst. Nulla volutpat urna nibh, in rhoncus velit ultricies id. Nullam nunc lorem, convallis fermentum felis eu, bibendum mattis ipsum. Nunc varius euismod metus, sit amet consequat sapien tincidunt et. Donec viverra nulla non nulla lacinia eleifend. Sed dapibus orci a justo molestie, at suscipit magna hendrerit. Morbi eget pretium risus, sed tincidunt nisl. Aenean eu eros nunc. Aenean in vulputate augue. Sed sit amet feugiat ligula.
+			<div class="return_button">Return to top</div>
+
+		</div>
+	</div>	
+</section>
 	
 	
 </body>
