--- a/Free_code_camp/Technical_document/index.html
+++ b/Free_code_camp/Technical_document/index.html
@@ -4,6 +4,7 @@
 	<link rel="stylesheet" type="text/css" href="styles/style.css">
 	<script src="https://use.fontawesome.com/f37781fe0a.js"></script>
 	<script src="scripts/script.js"></script>
+	<link href="https://fonts.googleapis.com/css?family=Archivo+Narrow|Open+Sans" rel="stylesheet">
 </head>
 	
 <body>
@@ -15,9 +16,9 @@
 <section>
 	<div class="container">
 		<div class="side_bar">
-			<h2>Contents</h2>
-			<p>Select drop down sub categories</p>
-				<div class="sections" onclick="drop_down(1);">
+			<div class="side_text"><h2>Contents</h2>
+			<p>Select drop down sub categories</p></div>
+				<div id="first_sec" class="sections" onclick="drop_down(1);">
 					Section 1 <i class="fa fa-caret-down"></i></div>
 					<div class="sub_group" id="sub_1">
 						<a href="#">Sub Category</a>
